# codex-core

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  project_structure.txt  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
0.x/: 404.html  index.html  objects.inv
0.x/changelog/: index.html
0.x/en/: index.html
0.x/en/api/: index.html
0.x/en/architecture/: index.html
0.x/evolution/roadmap/: index.html
0.x/planning/python_version_policy/: index.html
0.x/ru/: index.html
0.x/ru/architecture/: index.html
0.x/search/: search_index.json
api/: index.html
api/common/: index.html
api/core/: index.html
api/settings/: index.html
changelog/: index.html
docs/: index.md
docs/api/: common.md  core.md  index.md  settings.md
docs/api/common/: cache.md  index.md  logger.md  phone.md  text.md
docs/api/core/: base_dto.md  index.md  interfaces.md
docs/api/schemas/: index.md
docs/api/settings/: index.md
docs/en/: README.md
docs/en/api/: common.md  core.md  dev.md  index.md  settings.md
docs/en/architecture/: README.md
docs/en/tasks/: getting_started.md
docs/en_EN/: README.md
docs/en_EN/architecture/: README.md
docs/en_EN/guide/: getting_started.md
docs/evolution/: roadmap.md
docs/planning/: python_version_policy.md
docs/ru/: README.md
docs/ru/architecture/: README.md
docs/ru/tasks/: getting_started.md
docs/ru_RU/: README.md
docs/ru_RU/architecture/: README.md
docs/ru_RU/guide/: getting_started.md
en_EN/: index.html
en_EN/architecture/: index.html
en_EN/guide/getting_started/: index.html
evolution/roadmap/: index.html
ru_RU/: index.html
ru_RU/architecture/: index.html
ru_RU/guide/getting_started/: index.html
search/: search_index.json
src/codex_core/common/: __init__.py  log_context.py  loguru_setup.py  phone.py  text.py
src/codex_core/core/: __init__.py  base_dto.py  exceptions.py  pii.py
src/codex_core/dev/: check_runner.py  project_tree.py
src/codex_core/settings/: base.py
src/codex_tools/: __init__.py
src/codex_tools/common/: __init__.py  cache.py  log_context.py  loguru_setup.py  text.py
src/codex_tools/core/: __init__.py  base_dto.py  exceptions.py  interfaces.py  pii.py
src/codex_tools/schemas/: __init__.py  response.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_settings_integration.py
tests/unit/: conftest.py
tools/dev/: README.md  check.py
(+59 files in other folders)
